[package]
name = "rusocks"
version = "0.0.2"
edition = "2021"
description = "a socks4(a)/5 server"
license = "Apache-2.0"
keywords = ["socks", "socks4", "socks4a", "socks5", "server"]

[dependencies]
async-trait = "0.1.83"
thiserror = "1.0.66"
tokio = { version = "1.41.0", features = ["io-util"] }

[dev-dependencies]
tokio = { version = "1.41.0", features = [
  "net",
  "io-util",
  "macros",
  "rt-multi-thread",
] }
