[package]
name = "rusocks"
version = "0.0.7"
edition = "2021"
description = "A socks4(a)/5 server"
license = "Apache-2.0"
keywords = ["socks", "socks4", "socks4a", "socks5", "server"]

[dependencies]
async-trait = "0.1.83"
thiserror = "2.0.1"
tokio = { version = "1.41.1", features = ["net", "io-util"] }

[dev-dependencies]
futures = "0.3.31"
tokio = { version = "1.41.1", features = [
  "net",
  "time",
  "io-util",
  "macros",
  "rt-multi-thread",
] }
